--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
+    "@hookform/resolvers": "^4.1.3",
+    "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/material-nextjs": "^6.4.3",
+    "@mui/x-data-grid": "^7.28.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "dayjs": "^1.11.13",
     "firebase": "^11.5.0",
     "next": "14.2.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "zod": "^3.24.2"
   },
